# aigonviewer

./: .gitignore  README.md  cli.py  install.sh  process_manager.py  pyproject.toml  server.py  version.py
static/: app.js  style.css
templates/: base.html  index.html  viewer.html
