[project]
name = "aigon-viewer-server"
version = "0.7.2"
description = "Standalone markdown viewer server with local and remote file support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "markdown>=3.7.0",
    "pymdown-extensions>=10.0.0",
    "Jinja2>=3.1.4",
    "httpx>=0.25.0",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.0",
    "pygments>=2.16.0",
]

[project.scripts]
aigonviewer = "cli:main"           # Full CLI with process management
aigonviewer_base = "server:main"   # Direct server execution (simple mode)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = [
    "server.py",
    "cli.py",
    "process_manager.py",
    "version.py",
    "templates/**/*",
    "static/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "cli.py",
    "process_manager.py",
    "version.py",
    "templates/",
    "static/",
    "README.md",
    "pyproject.toml",
]
